--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
         <h2 class="min-title">articles</h2>
         <div class="container">
             <div class="box">
-                <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-01.jpg" alt="">
+                <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t39.30808-6/277785654_3158837754375041_9153897838896085554_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=7zW4aC8zJFgAX8wNQL2&_nc_ht=scontent.fcai20-3.fna&oh=00_AT-viKOT_bG4HXcHJBLNif4FlIYzENUO0C3_RahLwQDazQ&oe=6256AC08"
+                    alt="">
                 <div class="content">
-                    <h3>test come</h3>
+                    <h3>fun day</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, eos.</p>
                 </div>
                 <div class="info">
@@ -113,9 +114,10 @@
             </div>
 
             <div class="box">
-                <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-02.jpg" alt="">
+                <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/116400251_2687619284830226_6989950672062734778_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=e3f864&_nc_ohc=_7X6yzmgS6EAX83nRB4&_nc_ht=scontent.fcai20-3.fna&oh=00_AT_ExfDR4KkMayNDP48uPYtSk2NSvgNyTHx_-5TkOu0jzA&oe=62775A73"
+                    alt="">
                 <div class="content">
-                    <h3>test come</h3>
+                    <h3>last day </h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, eos.</p>
                 </div>
                 <div class="info">
@@ -126,9 +128,10 @@
             </div>
 
             <div class="box">
-                <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-03.jpg" alt="">
+                <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/75000437_2454040431521447_5402767420383297536_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=19026a&_nc_ohc=uF2XPG5_3rMAX9aUYNM&_nc_ht=scontent.fcai20-3.fna&oh=00_AT_dBnJPXXXIgMdfEWN_NhqAFECa_SX4wozrdFAhnbzo4g&oe=627567F6"
+                    alt="">
                 <div class="content">
-                    <h3>test come</h3>
+                    <h3>out go </h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, eos.</p>
                 </div>
                 <div class="info">
@@ -139,9 +142,10 @@
             </div>
 
             <div class="box">
-                <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-04.jpg" alt="">
+                <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/65185128_2354923464766478_9105822600189181952_n.jpg?_nc_cat=107&ccb=1-5&_nc_sid=19026a&_nc_ohc=GNlBUCFu3BEAX8n4VJP&_nc_oc=AQmMsSwSVNsffuMpB5ahkxVpECqozcQKMZPyY8eSURNr7SNWtrXmS0hXS08tYQ7fb7I&_nc_ht=scontent.fcai20-3.fna&oh=00_AT9oXn4HY_Pw-yAAQh8qPnFjuoMBCS1G0GQbhSE0tTMBYg&oe=6277838A"
+                    alt="">
                 <div class="content">
-                    <h3>test come</h3>
+                    <h3>good life</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, eos.</p>
                 </div>
                 <div class="info">
@@ -152,9 +156,10 @@
             </div>
 
             <div class="box">
-                <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-05.jpg" alt="">
+                <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/62107386_2340004972924994_3861541289799450624_n.jpg?_nc_cat=108&ccb=1-5&_nc_sid=19026a&_nc_ohc=FJF10jiDMBMAX8BOqTZ&_nc_ht=scontent.fcai20-3.fna&oh=00_AT_fDrrb6LQ-6XoAAHIrhc0QIzvs39O-syV7ZN1h9wq-aA&oe=6276A680"
+                    alt="">
                 <div class="content">
-                    <h3>test come</h3>
+                    <h3>come on</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, eos.</p>
                 </div>
                 <div class="info">
@@ -165,9 +170,10 @@
             </div>
 
             <div class="box">
-                <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-06.jpg" alt="">
+                <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/64659719_2347864912139000_4927668407366582272_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=bPL9mxF4ruwAX-jSQRT&tn=xDOzLzJEocKlvXxO&_nc_ht=scontent.fcai20-3.fna&oh=00_AT-9F0QuiPzbAZzEIzTzb_ERSfiyJRihqFheR_mx6SJ00w&oe=62767F80"
+                    alt="">
                 <div class="content">
-                    <h3>test come</h3>
+                    <h3>no here</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, eos.</p>
                 </div>
                 <div class="info">
@@ -178,9 +184,10 @@
             </div>
 
             <div class="box">
-                <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-08.jpg" alt="">
+                <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/61638179_2337685066490318_5058757904526475264_n.jpg?_nc_cat=111&ccb=1-5&_nc_sid=19026a&_nc_ohc=QAz2Mo0g6pMAX_rhh0V&tn=xDOzLzJEocKlvXxO&_nc_ht=scontent.fcai20-3.fna&oh=00_AT-Z3H845Kdf1DFbcc8Il-BxB291vvP8Kk_uNKWvhd5xEw&oe=627569BE"
+                    alt="">
                 <div class="content">
-                    <h3>test come</h3>
+                    <h3>come down</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, eos.</p>
                 </div>
                 <div class="info">
@@ -191,9 +198,10 @@
             </div>
 
             <div class="box">
-                <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/cat-07.jpg" alt="">
+                <img src="	https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/61507842_2336964583229033_6957031534079508480_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=19026a&_nc_ohc=yzT0twdwtCgAX9l95DT&_nc_ht=scontent.fcai20-3.fna&oh=00_AT91gX07dmZGbnFjfQ97U8IRdWewG7O0IwpYktXl-L4dSg&oe=62757A53"
+                    alt="">
                 <div class="content">
-                    <h3>test come</h3>
+                    <h3>test life</h3>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, eos.</p>
                 </div>
                 <div class="info">
@@ -212,34 +220,40 @@
         <div class="container">
             <div class="box">
                 <div class="image">
-                    <img src="https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-01.png" alt="">
+                    <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/67981991_2380357982223026_2488915629428441088_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=174925&_nc_ohc=QZWZqo01tu4AX_ZvPxu&_nc_ht=scontent.fcai20-3.fna&oh=00_AT8UPKBVkVRHOLXzojYYtOvL2bk7woUXnciyzvl1TEeTDA&oe=62758741"
+                        alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-02.png" alt="">
+                    <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/69490790_2396333597292131_4122111805981982720_n.jpg?_nc_cat=109&ccb=1-5&_nc_sid=84a396&_nc_ohc=O--6iw2GlnwAX_lXn0c&_nc_ht=scontent.fcai20-3.fna&oh=00_AT-PBTTpamBw5q5KkxHe16xOPKm1QbQbRw1rwdpqUSaYnA&oe=6275E5F8"
+                        alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-03.jpg" alt="">
+                    <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/68955267_2392028354389322_4980438063487385600_n.jpg?_nc_cat=104&ccb=1-5&_nc_sid=174925&_nc_ohc=ef7lS1EHwagAX_yPjOc&_nc_ht=scontent.fcai20-3.fna&oh=00_AT8NPEJDaAdJSRUfYEKN16Kl54mHg8h3yhzB1G0CaAtVkw&oe=62775A71"
+                        alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-04.png" alt="">
+                    <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/62143848_2340008502924641_5106651793513775104_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=174925&_nc_ohc=mO6MdIHCyngAX8MYkib&tn=xDOzLzJEocKlvXxO&_nc_ht=scontent.fcai20-3.fna&oh=00_AT-G-NplRMiifAYxjxnekthk2LLmt63At2q_BRaiD2Egxg&oe=627718D3"
+                        alt="">
                 </div>
 
             </div>
             <div class="box">
                 <div class="image">
 
-                    <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-05.jpg" alt="">
+                    <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/66617013_2361440107448147_4515983113301524480_n.jpg?_nc_cat=100&ccb=1-5&_nc_sid=174925&_nc_ohc=xandqVrLn-kAX8kPymZ&_nc_ht=scontent.fcai20-3.fna&oh=00_AT8Z_jlGk4o8ekfBANtYfDTsb82N-UtoYdEPfYdQ1uqk6g&oe=6278A625"
+                        alt="">
                 </div>
             </div>
             <div class="box">
                 <div class="image">
-                    <img src="	https://elzerowebschool.github.io/HTML_And_CSS_Template_Three/imgs/gallery-06.png" alt="">
+                    <img src="https://scontent.fcai20-3.fna.fbcdn.net/v/t1.6435-9/53619717_2285641238361368_2626260162339405824_n.jpg?_nc_cat=105&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=-OoB6G8fJXQAX9eXhRy&tn=xDOzLzJEocKlvXxO&_nc_ht=scontent.fcai20-3.fna&oh=00_AT_czdbXo4lSqV00NegwnVnhPFveP0ztHzQsbG6VBh3cqg&oe=62792181"
+                        alt="">
                 </div>
             </div>
         </div>
