new html & css editing

--- a/index.html
+++ b/index.html
@@ -278,6 +278,29 @@
         <button>visit my project</button>
     </div>
     <!-- end my portofil-- -->
+    <!-- start video-- -->
+    <div class="video">
+        <h2 class="min-title">View our </h2>
+        <div class="container">
+            <div class="show">
+                <video src="video.mp4" controls></video>
+            </div>
+            <div class="text-go">
+                <h3>view about us.</h3>
+                <p>You can use managed publishing to control exactly when changes to your app are published. When managed publishing is switched on, you can see what changes you submit are in review and what changes are ready for publishing on the Publishing
+                    overview page.</p>
+            </div>
+        </div>
+    </div>
+    <!-- end my video-- -->
+    <!-- start map-- -->
+
+    <div class="map">
+        <h2 class="min-title">map</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13769.413203539001!2d30.947680378103094!3d30.369324071689594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14587d2862174b37%3A0x9c6301c909c29f1a!2z2LHZhdmE2Ycg2KfZhNil2YbYrNio2Iwg2LHZhdmE2Kkg2KfZhNij2YbYrNio2Iwg2YXYsdmD2LIg2KPYtNmF2YjZhtiMINin2YTZhdmG2YjZgdmK2Kk!5e0!3m2!1sar!2seg!4v1649515599672!5m2!1sar!2seg"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <!-- end map-- -->
 </body>
 
 </html>د
